
Version 0.3
===========

[0.3.0] -- 2022-xx-xx
---------------------

Added
+++++

- The Project page displays cards from modules with ``context="ProjectContext"`` (#27, #110).
- Schema module for the ProjectContext (#110).
- ProjectContext support for the DocumentList, ImageViewer, TextDisplay, and VideoViewer modules (#110).

Changed
+++++++

- Hide the list of modules in the sidebar when viewing the job list (#110).

Fixed
+++++

- Hide the list and grid view buttons when viewing a single job (#92, #110).
- Fixed bug with disabled modules not showing a checkbox to enable them in the grid view (#134).

Version 0.2
===========

[0.2.11] -- 2022-xx-xx
----------------------

Added
+++++

- The endpoint ``views.get_file`` now reads the ``download_name`` request argument (#127).

Fixed
+++++

- FileList module now respects prefix_jobid option (#127, #128).
- Endpoints added via ``Dashboard.add_url`` can be used with multiple routes (#130).

[0.2.10] -- 2022-04-05
----------------------

Added
+++++

- Ability to select modules and views on narrow screens (#114).

Fixed
+++++

- Jinja2 and markupsafe are now dependencies (#123, #125).

Removed
+++++++

- Dropped support for Python 3.7 following the recommended support schedules of `NEP 29 <https://numpy.org/neps/nep-0029-deprecation_policy.html>`__.

[0.2.9] -- 2022-02-08
---------------------

Fixed
+++++

- Use Flask's ``send_from_directory`` for safety (#111).

[0.2.8] -- 2021-05-26
---------------------

Added
+++++

- Code is formatted with pre-commit hooks (#95).
- ``per_page`` argument added to pagination query options (#94).

Changed
+++++++

- Tests now use pytest (#96).

Fixed
+++++

- Kitchen sink example uses FlowProject to ensure all features are used (#94).

[0.2.7] -- 2020-02-27
---------------------

Fixed
+++++

- Added submodules in CI deployment to fix broken bulma.

[0.2.6] -- 2020-02-25
---------------------

Fixed
+++++

- Updated dependencies to prevent errors with Werkzeug.
