@@ -21,9 +21,13 @@ if __name__ == "__main__":
             for b in range(10):
                 project.open_job({"a": a, "b": b}).init()
 
+    config = {
+        "CARDS_PER_ROW": 4,
+    }
+
     modules = []
     if "dashboard" not in project.document:
         # Initialize a new Dashboard using all modules with default settings
         for m in signac_dashboard.modules.__all__:
             modules.append(getattr(signac_dashboard.modules, m).__call__())
-    Dashboard(modules=modules, project=Project.get_project()).main()
+    Dashboard(config=config, modules=modules, project=Project.get_project()).main()
