@@ -7,6 +7,7 @@
 
 {% set context = "ProjectContext" %}
 {% set num_enabled_modules = enabled_module_indices[context] | length %}
+{% set columns_per_card = (12 / CARDS_PER_ROW) | int %}
 
 {% set card_count = [] %}
 {% if num_enabled_modules > 1 %}
@@ -17,7 +18,7 @@
     {% for card in module.get_cards(g.project) %} {# begin cards #}
         {# jinja variables go out of scope after the loop unless this "list" hack is used #}
         {% if card_count.append(1) %}{% endif %}
-        <div class="column is-4-desktop is-full-mobile">
+        <div class="column is-{{ columns_per_card }}-desktop is-full-mobile">
             <div class="card">
                 <div class="card-header">
                     <div class="card-header-title card-header-dashboard">
